updated linkedin link, photo on main page date on about me, and intro text

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,24 +15,28 @@ import RecentPublications from "../components/RecentPublications.astro";
     <Header />
     <main class="flex flex-col justify-center">
       <div class="px-4 md:px-16 flex flex-col gap-4 md:my-10">
-        <h1 class="text-2xl md:text-5xl w-full">🧑‍🚀 Hello, Astronaut!</h1>
-        <p class="w-full text-justify text-base md:text-lg">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi officia
-          neque eligendi nulla impedit error, consequuntur aspernatur autem id
-          pariatur tenetur quod.
+        <h1 class="text-2xl md:text-4xl w-full">🧑‍🚀 Dream Chaser, searching for innovation in the clouds</h1>
+        <p class="w-full text-justify text-base md:text-md">
+        Welcome to my blog, where I blend my passion for cloud computing, automation, and infrastructure management with a relentless pursuit of innovation. As a seasoned professional with a solid background in systems integration and administration, I have honed my skills across AWS, GCP, and Azure. My journey has been fueled by scripting and automation, leveraging languages like Go, Ruby, and Python to drive efficiency and create robust solutions.
+        </p>
+        <p class="w-full text-justify text-base md:text-md">
+        Leading teams and managing large-scale systems have been at the core of my career, where I’ve consistently delivered results through innovative approaches. I thrive on mentoring team members, fostering collaboration with cross-functional teams, and maintaining clear communication with stakeholders to ensure everyone is aligned and making progress.
+        </p>
+        <p class="w-full text-justify text-base md:text-md">
+        Join me as I share insights, experiences, and the latest trends in the ever-evolving world of cloud computing. Together, let’s chase our dreams and push the boundaries of what’s possible in technology.
         </p>
       </div>
       <div class="w-full flex flex-col items-center gap-2.5 px-4 lg:px-0 mt-6">
         <img
-          src="https://images.unsplash.com/photo-1635627408144-6bf36d28fb98"
+          src="https://images.unsplash.com/photo-1595088402198-24d44e48d57c?q=80&w=2716&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
           alt="Astronaut"
         />
         <p class="italic text-xs text-gray-600 dark:text-neutral-400">
-          Foto de <a
-            href="https://unsplash.com/es/@niklasjonasson?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash"
-            >Niklas Jonasson</a
+          Foto: <a
+            href="https://unsplash.com/@liuchen37"
+            >Chen Liu</a
           > en <a
-            href="https://unsplash.com/es/fotos/un-cuerpo-de-agua-con-arboles-en-el-fondo-j_WW0u2yYAE?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash"
+            href="https://unsplash.com/photos/blue-brown-and-yellow-abstract-painting-kZH8X0q4Nvo"
             >Unsplash</a
           >
         </p>
@@ -42,4 +46,3 @@ import RecentPublications from "../components/RecentPublications.astro";
     <Footer />
   </body>
 </html>
-
