--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -13,7 +13,7 @@ const today = new Date();
         easy to use.
       </p>
 	  <div class="flex gap-3 mt-3">
-		<a href="https://linkedin.com/thermanowicz" target="_blank">
+		<a href="https://linkedin.com/in/tomasz-hermanowicz/" target="_blank">
 			<Icon name="radix-icons:linkedin-logo" class="w-5 h-5 text-gray-600 hover:text-gray-500 dark:text-neutral-200"/>
 		</a>
 		<a href="https://www.github.com/hermanowicz" target="_blank">
