I added few basic posts to start

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,15 +15,11 @@ import RecentPublications from "../components/RecentPublications.astro";
     <Header />
     <main class="flex flex-col justify-center">
       <div class="px-4 md:px-16 flex flex-col gap-4 md:my-10">
-        <h1 class="text-2xl md:text-4xl w-full">🧑‍🚀 Dream Chaser, searching for innovation in the clouds</h1>
+        <h1 class="text-2xl md:text-4xl w-full">🧑‍🚀 Dream Chaser, searching for innovation in the clouds ...</h1>
         <p class="w-full text-justify text-base md:text-md">
-        Welcome to my blog, where I blend my passion for cloud computing, automation, and infrastructure management with a relentless pursuit of innovation. As a seasoned professional with a solid background in systems integration and administration, I have honed my skills across AWS, GCP, and Azure. My journey has been fueled by scripting and automation, leveraging languages like Go, Ruby, and Python to drive efficiency and create robust solutions.
-        </p>
-        <p class="w-full text-justify text-base md:text-md">
-        Leading teams and managing large-scale systems have been at the core of my career, where I’ve consistently delivered results through innovative approaches. I thrive on mentoring team members, fostering collaboration with cross-functional teams, and maintaining clear communication with stakeholders to ensure everyone is aligned and making progress.
-        </p>
-        <p class="w-full text-justify text-base md:text-md">
-        Join me as I share insights, experiences, and the latest trends in the ever-evolving world of cloud computing. Together, let’s chase our dreams and push the boundaries of what’s possible in technology.
+            plateau in life are also important...<a
+              href="https://extraordinaryroutines.com/musings/life-plateau"
+              >more about plaeau's</a>
         </p>
       </div>
       <div class="w-full flex flex-col items-center gap-2.5 px-4 lg:px-0 mt-6">
@@ -37,8 +33,7 @@ import RecentPublications from "../components/RecentPublications.astro";
             >Chen Liu</a
           > en <a
             href="https://unsplash.com/photos/blue-brown-and-yellow-abstract-painting-kZH8X0q4Nvo"
-            >Unsplash</a
-          >
+            >Unsplash</a>
         </p>
       </div>
 	  <RecentPublications />
